--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
                     <div class="item">
                         <img src="./img/gallery/gallery5.jpg" width="1300" height="768">
                     </div>
+					<div class="item">
+                        <img src="./img/gallery/gallery6.jpg" width="1300" height="768">
+                    </div>
+					<div class="item">
+                        <img src="./img/gallery/gallery7.jpg" width="1300" height="768">
+                    </div>
+					 <div class="item">
+                        <img src="./img/gallery/gallery8.jpg" width="1300" height="768">
+                    </div>
                 </div>
                 <div class="carousel-indicators-wrap">
                     <ol class="carousel-indicators">
@@ -127,6 +136,9 @@
                         <li data-target="#gallery" data-slide-to="3"></li>
                         <li data-target="#gallery" data-slide-to="4"></li>
                         <li data-target="#gallery" data-slide-to="5"></li>
+                        <li data-target="#gallery" data-slide-to="6"></li>
+                        <li data-target="#gallery" data-slide-to="7"></li>
+                        <li data-target="#gallery" data-slide-to="8"></li>
                     </ol>
                 </div>
                 <a class="carousel-control left" href="#gallery" data-slide="prev">‹</a>
@@ -211,15 +223,14 @@
                 </div>
             </section>
 
-            <section id="add-to-our-story" style="background: url(&quot;img/bg/add-to.jpg&quot;) left top no-repeat;"> 
+            <section id="remote" style="background: url(&quot;img/bg/remote.jpg&quot;) left top no-repeat;"> 
                 <div class="wrapper" data-5200="margin-top: 150px;" data-5600="margin-top: 0px;">
-                    <h2 class="ir heading-add-to-our-story">add to our story</h2>
-                    <p><strong>#JUDIEANDZ</strong></p>
-                    <p>Capture memories at any point during the festivities and post them to Instagram using #judieandz and they will be projected throughout the reception. All photos will also be viewable here after the event.</p>
-                    <p>Photos: <a href="https://www.truephotography.com/event/judie-z?view=gallery&amp;t=vendor&amp;v=ultimate-skybox&amp;c=3E322B&amp;l=00BF92&amp;w=0&amp;m=1" target="_blank">True Photography</a> | <a href="https://www.instagram.com/explore/tags/judieandz/" target="_blank">Instagram Feed</a><br>Videography: <a href="http://rusticred.com/blog/essential/judie-and-z-wedding-highlights" target="_blank">Rustic Red Studio</a></p>
-                    <p>If you have any questions, please email us at: <a href="mailto:judieandz@gmail.com">judieandz@gmail.com</a></p>
-                    <p class="sig"><span class="ir heading-love-small">==love++</span></p>
-                    <p class="sig">J &amp; Z</p>
+                    <h1 class="heading">Celebrate With Us Remotely</h1>
+                    <p>We have friends and family around the world, and while we'd love to see everyone in person, we fully understand that it's difficult for many to physically attend the wedding.</p>
+                    <p>We nonetheless hope that you will celebrate with us where ever you may be.</p>
+					<p>If you'd like to participate virtually, please send us a video message that we will splice together and play at the reception. Please keep the video at ~30sec to 1 min, use landscape orientation, and include your name and location. If the file size is less than 50MB, feel free to email us at the address below. If it's larger, you can upload to the shared <a href="https://drive.google.com/drive/folders/154Xq8WUxSkpviVhWrq7u7ZQ64zZJhSNb?usp=sharing">Google Drive</a> or reach out to us separately to make arrangements</p>
+					
+					<p>Our simply reach us via our email at <a href="mailto:TiMich.Wedding@gmail.com">TiMich.Wedding@gmail.com</a> or through any other contact mechanism. We'd love to hear from you!</p>
                 </div>
                 <p class="tagline">Site template heavily borrowed and adapted from https://www.judieandz.com/</p>
             </section>
@@ -232,7 +243,7 @@
                     <li class=""><a href="#registry">Registry</a></li>
                     <li class=""><a href="#travel">Travel</a></li>
                     <li class=""><a href="#to-do-to-eat">To do/To eat</a></li>
-                    <li class="last"><a href="#add-to-our-story">Add to our story</a></li>
+                    <li class="last"><a href="#remote">Add to our story</a></li>
                 </ul>
             </nav>
 
