--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>July 31st, 2023</h1>
                             <h3>The Beginning</h3>
 							<hr />
-							<p>It all started with a simple and polite email exchange after an introduction from family & friends. Michelle, as popular as she was, more or less ignored Tim :-P. Tim was Sr. Software Dev Manager in Seattle and Michelle was a lawyer living in Shanghai. Neither was looking for a long-distance relationship. </p>
+							<p>It all started with a simple and polite email exchange after an introduction from family & friends. Tim was Sr. Software Dev Manager in Seattle and Michelle was a lawyer living in Shanghai. Neither was looking for a long-distance relationship. </p>
                             <a href="#" class="icn-history-close">close</a>
                         </div>
                     </div>
