--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     <li class="last"><a href="#remote">リモート</a></li>
                 </ul>
             </nav>
-			<div id="languageSelector">
+			<div id="languageSelector" data-717="font-size: 2em;" data-718="font-size: 1em;">
 				<a class="active" toggle="english">English</a><span> | </span><a toggle="chinese">中文</a><span> | </span><a toggle="japanese">日本語</a>
 			</div>
 
