--- a/index.html
+++ b/index.html
@@ -462,7 +462,8 @@
                     <li class="last"><a href="#remote">リモート</a></li>
                 </ul>
             </nav>
-			<div id="languageSelector" data-717="font-size: 2em;" data-718="font-size: 1em;">
+			<div id="languageSelector" data-717="font-size: 2em; color: #7e7e7e; background: rgba(0, 0, 0, 0.6);" data-718="font-size: 1em; color: black; background: rgba(0, 0, 0, 0.4);
+">
 				<a class="active" toggle="english">English</a><span> | </span><a toggle="chinese">中文</a><span> | </span><a toggle="japanese">日本語</a>
 			</div>
 
