--- a/index.html
+++ b/index.html
@@ -462,8 +462,10 @@
                     <li class="last"><a href="#remote">リモート</a></li>
                 </ul>
             </nav>
-			<div id="languageSelector" data-717="font-size: 2em; color: #7e7e7e; background: rgba(0, 0, 0, 0.6);" data-718="font-size: 1em; color: black; background: rgba(0, 0, 0, 0.4);
-">
+			<div id="languageSelector" data-717="font-size: 2em; color: #7e7e7e; background: rgba(0, 0, 0, 0.6); filter: alpha(opacity=100); -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=100)';
+												-moz-opacity: 1; -khtml-opacity: 1; opacity: 1;"
+										data-718="top: auto; bottom: 0; font-size: 1em; color: black; background: rgba(0, 0, 0, 0.4); filter: alpha(opacity=40); -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=40)';
+												-moz-opacity: 0.4; -khtml-opacity: 0.4; opacity: 0.4;" ">
 				<a class="active" toggle="english">English</a><span> | </span><a toggle="chinese">中文</a><span> | </span><a toggle="japanese">日本語</a>
 			</div>
 
