--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 						Michelle &amp; Tim are getting married June 3rd, 2023
 					</span><span class="chinese">
 						米歇爾和蒂姆將於 2023 年 6 月 3 日結婚
-					</span><span class="japanese">
-						ミシェルとティムは 2023 年 6 月 3 日に結婚します
 					</span>
 				</h1>
             </section>
@@ -41,20 +39,15 @@
                         <a href="#" class="icn-history-more">more</a>
                         <div class="info">
 							<span class="english">
-								<h1>July 31st, 2023</h1>
+								<h1>July 31st, 2019</h1>
 								<h3>The Beginning</h3>
 								<hr />
 								<p>It all started with a simple and polite email exchange after an introduction from family & friends. Tim was Sr. Software Dev Manager in Seattle and Michelle was a lawyer living in Shanghai. Neither was looking for a long-distance relationship. </p>
 							</span><span class="chinese">
-								<h1>2023 年 7 月 31 日</h1>
+								<h1>2019 年 7 月 31 日</h1>
 								<h3>開始</h3>
 								<hr />
 								<p>在家人和朋友的介紹下，這一切都始於簡單而禮貌的電子郵件交流。 Tim 是西雅圖的高級軟件開發經理，Michelle 是住在上海的律師。兩人都沒有在尋找異地戀。 </p>
-							</span><span class="japanese">
-								<h1>2023 年 7 月 31 日</h1>
-								<h3>はじまり</h3>
-								<hr />
-								<p>すべては、家族や友人からの紹介によるシンプルで丁寧なメール交換から始まりました。 Tim はシアトルのシニア ソフトウェア開発マネージャーで、Michelle は上海在住の弁護士でした。どちらも遠距離恋愛を求めていませんでした。 </p>
 							</span>
                             <a href="#" class="icn-history-close">close</a>
                         </div>
@@ -75,12 +68,6 @@
 								<hr />
 								<p>Tim 去台北參加他哥哥的婚禮。在一個大雨天困在公寓裡，蒂姆無聊地給恰好去台南探親的米歇爾發了短信。經過一番說服後，蒂姆跳上了 2 小時的火車車程，與米歇爾會面並度過了一天。</p> <p>一天快結束時，兩人在一個状元稞攤位短暫停留，奶奶在那裡“誤”叫他們趕緊結婚。原來奶奶是個千里眼。</p>
 								<p>一天快結束的時候，兩人在一個<糖果>攤前短暫停留，奶奶“誤”讓他們快點結婚。原來奶奶是個千里眼。</p>
-							</span><span class="japanese">
-								<h1>2019 年 9 月 11 日</h1>
-								<h3>最初の会議</h3>
-								<hr />
-								<p>ティムは兄の結婚式のために台北を訪れていました。非常に雨の日にアパートで立ち往生していたティムは、たまたま台南にいる彼女の家族を訪ねてきたミシェルにランダムにテキストメッセージを送るようになりました。ある程度説得した後、Tim は 2 時間の電車に飛び乗り、Michelle と待ち合わせて 1 日を過ごしました。</p>							
-								<p>一日の終わりに、2 人はちょっとの間 "状元稞" 屋台に立ち寄ったが、そこでおばあちゃんは「間違って」急いで結婚するように言った。おばあちゃんは実際には千里眼だったことが判明しました.</p>
 							</span>
 							<a href="#" class="icn-history-close">close</a>
                         </div>  
@@ -98,10 +85,6 @@
 								<h3>9207公里</h3>
 								<hr />
 								<p>受 COVID 大流行的影響，Tim 和 Michelle 只能進行長途聊天。然而，儘管兩個人都對建立嚴肅的異地戀關係猶豫不決，但事實證明，愛情更加強大和固執。它繼續生長和開花。 </p>
-							</span><span class="japanese">
-								<h3>9207km 先</h3>
-								<hr />
-								<p>COVID のパンデミックによって妨げられたティムとミシェルは、長距離チャットに追いやられました。しかし、両方の人々が深刻な遠距離恋愛をすることを躊躇しているにもかかわらず、愛はより強力で頑固であることが証明されています.それは成長し続け、花を咲かせます。 </p>
 							</span>
 							<a href="#" class="icn-history-close">close</a>
                         </div>
@@ -120,11 +103,6 @@
 								<h3>重新走到一起</h3>
 								<hr />
 								<p>隨著旅行限制終於解除，蒂姆回到台灣與米歇爾再次見面。決心彌補失去的時間，兩人盡可能在台灣和西雅圖閒逛。他們開始一起制定未來計劃，包括希望在不久的將來養一隻名叫“Truffle”的約克犬。</p>
-							</span><span class="japanese">
-								<h1>2022 年 7 月 21 日</h1>
-								<h3>一緒に戻る</h3>
-								<hr />
-								<p>旅行制限がようやく解除されたので、ティムはミシェルと再会するために台湾に戻ります。失った時間を取り戻そうと決心した2人は、可能な限り台湾とシアトルの両方でたむろしました。彼らは、近い将来「Truffle」という名前のヨーキーを手に入れたいなど、将来の計画を一緒に立て始めました.</p>
 							</span>
                             <a href="#" class="icn-history-close">close</a>
                         </div>
@@ -145,12 +123,6 @@
 								<hr />
 								<p>這個提議是在夜間沿著安平運河散步時提出的。米歇爾練習了她的驚訝反應，戴上了戒指，但又等了 5 分鐘才說“是”。</p>
 								<p>我們將在 2023 年 6 月 3 日的婚禮上慶祝我們的婚姻。當我們一起開啟生活的新篇章時，請親自或以精神加入我們。</p>
-							</span><span class="japanese">
-								<h1>2023 年 2 月 10 日</h1>
-								<h3>婚約</h3>
-								<hr />								
-								<p>この提案は、安平運河沿いの夜の散歩中に生まれました。ミシェルは驚きの反応を練習した後、指輪をはめましたが、さらに 5 分待ってから「はい」と言いました。</p>
-								<p>私たちは 2023 年 6 月 3 日に結婚式で結婚を祝っています。私たちの人生の新しい章を一緒に始めるので、直接または精神的に参加してください。</p>
 							</span>
 							<a href="#" class="icn-history-close">close</a>
                         </div>
@@ -200,7 +172,6 @@
 					<div class="item textBg">
                         <div class="galleryText english">Our pre-wedding photos will be available here in June</div>
 						<div class="galleryText chinese">我們的婚前照片將於 6 月在此處提供</div>
-                        <div class="galleryText japanese">私たちの結婚式前の写真は、6月にここで利用できるようになります</div>
                     </div>
                 </div>
                 <div class="carousel-indicators-wrap">
@@ -238,10 +209,6 @@
 						<h1 class="heading chinese">慶祝活動</h1>
 						<h2>星期六</h2>
 						<h2>6月3日</h2>
-					</span><span class="japanese">
-						<h1 class="heading japanese">お祭り</h1>
-						<h2>土曜日</h2>
-						<h2>6月3日</h2>
 					</span>
 					
                     <div class="carousel-inner">
@@ -259,12 +226,6 @@
 								<p>婚禮將在位於台北東門長老教會位於100台北市中正區仁愛路二段76號<br><br>
 								<a href="https://goo.gl/maps/ANGPqM9CWZ7C53YVA" target="_blank">Google 地圖</a>
 								</p>
-							</span><span class="japanese">
-								<h3 class="time">結婚式, 3:30PM</h3>
-								<h4 class="location">Eastgate Presbyterian Church<br/>台北東門長老教會</h4>
-								<p>結婚式はで行われます Eastgate Prebysterian Church にある No. 76, Section 2, Ren'ai Rd, Zhongzheng District, Taipei City, Taiwan<br><br>
-								<a href="https://goo.gl/maps/ANGPqM9CWZ7C53YVA" target="_blank">Google 地図</a>
-								</p>
 							</span>
                         </div>
                         <div id="reception" class="item">
@@ -280,12 +241,6 @@
 								<h4 class="location">Shangri-La Far Eastern Hotel<br/>台北遠東香格里拉</h4>
 								<p>接待處將在台北遠東香格里拉位於106台北市大安區敦化南路二段201號。預備派對將於下午 6:00 開始，晚餐將於下午 6:30 開始。酒店距婚禮地點約 15 分鐘出租車車程。<br><br>
 								<a href="https://goo.gl/maps/TN2bdKWevtL7ZXiz5" target="_blank">Google 地圖</a>
-								</p>
-							</span><span class="japanese">
-								<h3 class="time">宴會, 6:30PM</h3>
-								<h4 class="location">Shangri-La Far Eastern Hotel<br/>台北遠東香格里拉</h4>
-								<p>受付は Shangri-La Far Eastern Hotel にある No. 201, Section 2, Dunhua S Rd, Da’an District, Taipei City, Taiwan 106。プレパーティーは午後 6 時から、ディナーは午後 6 時 30 分からです。ホテルは結婚式場からタクシーで約15分。<br><br>
-								<a href="https://goo.gl/maps/TN2bdKWevtL7ZXiz5" target="_blank">Google 地図</a>
 								</p>
 							</span>
                         </div>
@@ -309,12 +264,6 @@
 						<p>請稍後再回來查看我們可能有可用的東西。</p>
 						<br>
 						<p>不過，我們希望您考慮向我們朋友的慈善機構捐款，並鼓勵您的朋友和家人也這樣做，而不是給我們送結婚禮物。您可以在下面找到捐贈鏈接：</p>
-					</span><span class="japanese">
-						<h1 class="heading">レジストリ</h1>
-						<p>私たちは忙しすぎて (あるいは怠けすぎて)、座ってレジストリを作成することができませんでした.</p>
-						<p>利用可能なものがある場合は、後でもう一度確認してください。</p>
-						<br>
-						<p>ただし、結婚祝いの代わりに、友人の慈善団体への寄付を検討し、友人や家族にも同じことをするように勧めてください。寄付のリンクは以下にあります:</p>
 					</span>
 					<a class="violet-charity" href="https://gofund.me/81d919f6" target="_blank"><h2>A Cure for Violet<h2></a>
                 </div>
@@ -340,15 +289,6 @@
 						<ul>
 							<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">台北遠東香格里拉</a> （聯繫我們為客人提供 15% 的折扣）</li>
 							<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">台北福華大飯店</a> （舊，但位置方便）</li>
-						</ul>
-					</span><span class="japanese">
-						<h1 class="heading">旅行情報</h1>
-						<p><b>桃園空港 (TPE) から:</b> タクシーは、台北に行く最も簡単で手頃な価格の方法です。荷物受け取りエリアを出ると、タクシー情報ステーションがあります。費用は約 1400 NT ドルです。もっと安くするには、桃園空港 MRT で台湾中央駅まで行き、約 150 NT ドルで行くことができます。紫色の急行列車に乗ると、はるかに速くなります。</p>
-						<p><b>台北駅から:</b> タクシーで数百台湾ドルで目的地まで行くことができます。 MRT を利用する場合は、南港行きのブルー ラインに乗り、忠孝新生駅 (2 駅) で下車すると、結婚式に行くことができます。シャンライ ラ ホテルに行くには、ブルー ラインに乗って忠孝復興駅まで行きます。台北動物園駅行きのブラウン ラインに乗り換え、技術ビル駅または六張犁駅で下車します。 (<a href="https://english.metro.taipei/cp.aspx?n=1BE0AF76C79F9A38" target="_blank">地下鉄マップ</a>)</p>
-						<p><b>ホテルのオプション:</b></p>
-						<ul>
-							<li><a href="https://www.shangri-la.com/en/taipei/fareasternplazashangrila/" target="_blank">Shangri-La Far Eastern</a> （ゲストの15％割引についてはお問い合わせください）</li>
-							<li><a href="https://www.howard-hotels.com.tw/en_US/HotelBusiness/91" target="_blank">Howard Plaza Hotel</a> (古いけど便利な場所)</li>
 						</ul>
 					</span>
                 </div>
@@ -386,21 +326,6 @@
 						<div class="suggestions">
 							即將推出！
 						</div>
-					</span><span class="japanese">
-						<h1 class="heading">探検</h1>
-						<p>台北を訪れている間、やるべきことや食べることがたくさんあります。ここでいくつかの提案をリストします。 </p>
-						<h2>する</h2>
-						<div class="suggestions">
-							近日公開！
-							<br/>
-							<br/>
-							<br/>
-							<br/>
-						</div>
-						<h2>たべる</h2>
-						<div class="suggestions">
-							近日公開！
-						</div>
 					</span>
                 </div>
             </section>
@@ -421,13 +346,6 @@
 						<p>如果您想虛擬參與，請向我們發送視頻消息，我們將拼接在一起並在招待會上播放。請將視頻保持在 30 秒到 1 分鐘之間，並使用橫向。如果文件大小小於 50MB，請通過以下地址給我們發送電子郵件。如果更大，您可以上傳到共享的 <a href="https://drive.google.com/drive/folders/154Xq8WUxSkpviVhWrq7u7ZQ64zZJhSNb?usp=sharing">Google Drive</a> 或聯繫我們另行安排< /p>
 
 						<p>您可以通過 <a href="mailto:TiMich.Wedding@gmail.com">TiMich.Wedding@gmail.com</a> 或通過任何其他聯繫機制與我們聯繫。我們很樂意聽取您的意見！</p>
-					</span><span class="japanese">
-						<h1 class="heading">リモートでお祝いしましょう</h1>
-						<p>私たちには世界中に友人や家族がいます。みんなに直接会いたいと思っていますが、多くの人が結婚式に物理的に出席するのが難しいことを十分に理解しています.</p>
-						<p>それにもかかわらず、どこにいても私たちと一緒に祝ってくれることを願っています.</p>
-						<p>仮想的に参加したい場合は、一緒につなぎ合わせてレセプションで演奏するというビデオ メッセージを送ってください。動画は 30 秒から 1 分程度に保ち、横向きにしてください。ファイルサイズが50MB未満の場合は、下記アドレスまでメールでお問い合わせください。それより大きい場合は、共有の <a href="https://drive.google.com/drive/folders/154Xq8WUxSkpviVhWrq7u7ZQ64zZJhSNb?usp=sharing">Google ドライブ</a>にアップロードするか、別の手配をするために連絡を取ることができます< /p>
-
-						<p><a href="mailto:TiMich.Wedding@gmail.com">TiMich.Wedding@gmail.com</a> またはその他の連絡方法でご連絡ください。ご連絡お待ちしております!</p>
 					</span>
 				</div>
                 <p class="tagline">Site template heavily borrowed and adapted from https://www.judieandz.com/</p>
@@ -451,22 +369,13 @@
                     <li class=""><a href="#travel">旅行</a></li>
                     <li class=""><a href="#to-do-to-eat">做/吃</a></li>
                     <li class="last"><a href="#remote">遠程</a></li>
-                </ul>
-				<ul class="nav japanese">
-					<li class="active"><a href="#our-story">私たちのストーリー</a></li>
-                    <li class=""><a href="#gallery">ギャラリー</a></li>
-                    <li class=""><a href="#festivities">お祭り</a></li>
-                    <li class=""><a href="#registry">レジストリ</a></li>
-                    <li class=""><a href="#travel">旅行</a></li>
-                    <li class=""><a href="#to-do-to-eat">する/食べる</a></li>
-                    <li class="last"><a href="#remote">リモート</a></li>
-                </ul>
+                </ul>				
             </nav>
 			<div id="languageSelector" data-717="font-size: 2em; color: #7e7e7e; background: rgba(0, 0, 0, 0.6); filter: alpha(opacity=100); -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=100)';
 												-moz-opacity: 1; -khtml-opacity: 1; opacity: 1;"
 										data-718="top: auto; bottom: 0; font-size: 1em; color: black; background: rgba(0, 0, 0, 0.4); filter: alpha(opacity=40); -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=40)';
 												-moz-opacity: 0.4; -khtml-opacity: 0.4; opacity: 0.4;" ">
-				<a class="active" toggle="english">English</a><span> | </span><a toggle="chinese">中文</a><span> | </span><a toggle="japanese">日本語</a>
+				<a class="active" toggle="english">English</a><span> | </span><a toggle="chinese">中文</a>
 			</div>
 
 
