--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
 					 <div class="item">
                         <img src="./img/gallery/gallery8.jpg" width="1300" height="768">
                     </div>
+					<div class="item">
+                        <img src="./img/gallery/gallery9.jpg" width="1300" height="768">
+                    </div>
+					<div class="item imgBg">
+                        <img src="./img/gallery/gallery10.jpg" width="576" height="768">
+                    </div>
 					<div class="item textBg">
                         <div class="galleryText english">Our pre-wedding photos will be available here in June</div>
 						<div class="galleryText chinese">我們的婚前照片將於 6 月在此處提供</div>
@@ -185,7 +191,8 @@
                         <li data-target="#gallery" data-slide-to="6"></li>
                         <li data-target="#gallery" data-slide-to="7"></li>
                         <li data-target="#gallery" data-slide-to="8"></li>
-
+                        <li data-target="#gallery" data-slide-to="9"></li>
+                        <li data-target="#gallery" data-slide-to="10"></li>
                     </ol>
                 </div>
                 <a class="carousel-control left" href="#gallery" data-slide="prev">‹</a>
