--- a/index.html
+++ b/index.html
@@ -56,14 +56,13 @@
                         <img src="./img/bg/history-firstMeeting.jpg" width="1300" height="768">
                         <a href="#" class="icn-history-more">more</a>
                         <div class="info">
+							<h1>2019</h1>
 							<span class="english">
-								<h1>Sept 11th, 2019</h1>
 								<h3>First Meeting</h3>
 								<hr />
 								<p>Tim was visiting Taipei for his brother’s wedding. On a very rainy day stuck in the apartment, boredom drove Tim to randomly text Michelle who happened to be visiting her family in Tainan. After some convincing, Tim hopped on a 2-hour train ride to meet up and spend a day with Michelle.</p>
 								<p>Toward the end of the day, the two briefly stopped by a "状元稞" stand where the grandma “mistakenly” told them to hurry up and get married. Turns out grandma was actually a clairvoyant.</p>
 							</span><span class="chinese">
-								<h1>2019 年 9 月 11 日</h1>
 								<h3>第一次會議</h3>
 								<hr />
 								<p>Tim 去台北參加他哥哥的婚禮。在一個大雨天困在公寓裡，蒂姆無聊地給恰好去台南探親的米歇爾發了短信。經過一番說服後，蒂姆跳上了 2 小時的火車車程，與米歇爾會面並度過了一天。</p> <p>一天快結束時，兩人在一個状元稞攤位短暫停留，奶奶在那裡“誤”叫他們趕緊結婚。原來奶奶是個千里眼。</p>
@@ -93,8 +92,8 @@
                         <img src="./img/bg/history-backTogether.jpg" width="1300" height="768">
                         <a href="#" class="icn-history-more">more</a>
                         <div class="info">
+							<h1>2022</h1>
 							<span class="english">
-								<h1>July 21st, 2022</h1>
 								<h3>Back Together</h3>
 								<hr />
 								<p>With travel restrictions finally lifted, Tim travels back to Taiwan to meet up again with Michelle. Determined to make up for lost time, the two hung out whenever possible across both Taiwan and Seattle. They started making future plans together, including wanting to get a Yorkie named “Truffle” in the near future.</p>					
@@ -111,14 +110,13 @@
                         <img src="./img/bg/history-engagement.jpg" width="1300" height="768">
                         <a href="#" class="icn-history-more">more</a>
                         <div class="info">
+							<h1>2023</h1>
 							<span class="english">
-								<h1>Feb 10th, 2023</h1>
 								<h3>Engagement</h3>
 								<hr />
 								<p>The proposal came during a night time walk along the Anping canal. Michelle, having practiced her surprise reaction, put on the ring but waited another 5 minutes before saying “yes”.</p>
 								<p>We are celebrating our marriage on a wedding on June 3rd, 2023. Please join us in person or in spirit as we start a new chapter on our life together.</p>					
 							</span><span class="chinese">
-								<h1>2023 年 2 月 10 日</h1>
 								<h3>訂婚</h3>
 								<hr />
 								<p>這個提議是在夜間沿著安平運河散步時提出的。米歇爾練習了她的驚訝反應，戴上了戒指，但又等了 5 分鐘才說“是”。</p>
@@ -202,7 +200,7 @@
             <section id="quote">
                 <img src="./img/bg/quote.jpg" data-999="display: none;" data-1000="display: block;" data-1800="bottom: 0px;" data-2700="bottom: -500px;">
                 <div class="info" data-1500="top: 600px;" data-2100="top: 120px;" data-2550="top: 120px;" data-2700="top: -200px;">
-                    <p>Distance never seperates us<br>距離從未將我們分開<br>距離が私たちを引き離すことはありません<br></p>
+                    <p>Distance never seperates us<br>距離從未將我們分開<br>私たちの愛は距離に負けない<br></p>
                 </div>
             </section>
 
