--- a/index.html
+++ b/index.html
@@ -301,53 +301,19 @@
                 </div>
             </section>
 
-            <section id="to-do-to-eat" style="background: url(&quot;img/bg/canvas-bg.jpg&quot;) left top no-repeat;">
-                <div class="wrapper">
+            <section id="celebrate" style="background: url(&quot;img/bg/celebrate.jpg&quot;) left top no-repeat;"> 
+                <div class="wrapper" data-4300="margin-top: 150px;" data-4700="margin-top: 0px;">
 					<span class="english">
-						<h1 class="heading">Explore</h1>
-						<p>There are lots to do and plenty to eat while you are visiting Taipei. We will list out some of our recommendations here.</p>
-						<h2>To do</h2>
-						<div class="suggestions">
-							Coming Soon!
-							<br/>
-							<br/>
-							<br/>
-							<br/>
-						</div>
-						<h2>To eat</h2>
-						<div class="suggestions">
-							Coming Soon!
-						</div>
-					</span><span class="chinese">
-						<h1 class="heading">探索</h1>
-						<p>遊覽台北期間，有很多事情要做，也有很多東西可以吃。我們將在此處列出一些建議。</p>
-						<h2>做</h2>
-						<div class="suggestions">
-							即將推出！
-							<br/>
-							<br/>
-							<br/>
-							<br/>
-						</div>
-						<h2>去吃</h2>
-						<div class="suggestions">
-							即將推出！
-						</div>
-					</span>
-                </div>
-            </section>
-
-            <section id="remote" style="background: url(&quot;img/bg/remote.jpg&quot;) left top no-repeat;"> 
-                <div class="wrapper" data-5200="margin-top: 150px;" data-5600="margin-top: 0px;">
-					<span class="english">
-						<h1 class="heading">Celebrate With Us Remotely</h1>
+						<h1 class="heading">Celebrate With Us</h1>
+						<h2><a class="rsvp" href="https://forms.gle/cnS1CiZhZr1Htx3e9" targe="_blank">Click here to RSVP</a></h2>
 						<p>We have friends and family around the world, and while we'd love to see everyone in person, we fully understand that it's difficult for many to physically attend the wedding.</p>
 						<p>We nonetheless hope that you will celebrate with us where ever you may be.</p>
 						<p>If you'd like to participate virtually, please send us a video message that we will splice together and play at the reception. Please keep the video at ~30sec to 1 min and use landscape orientation. If the file size is less than 50MB, email us at the address below. If it's larger, you can upload to the shared <a href="https://drive.google.com/drive/folders/154Xq8WUxSkpviVhWrq7u7ZQ64zZJhSNb?usp=sharing">Google Drive</a> or reach out to make separate arrangements</p>
 						
 						<p>You can reach out to us at <a href="mailto:TiMich.Wedding@gmail.com">TiMich.Wedding@gmail.com</a> or through any other contact mechanism. We'd love to hear from you!</p>
 					</span><span class="chinese">
-						<h1 class="heading">遠程與我們一起慶祝</h1>
+						<h1 class="heading">與我們一起慶祝</h1>
+						<h2><a class="rsvp" href="https://forms.gle/cnS1CiZhZr1Htx3e9" targe="_blank">點擊此處回复</a></h2>
 						<p>我們在世界各地都有朋友和家人，雖然我們很想見到每個人，但我們完全理解許多人很難親自參加婚禮。</p>
 						<p>我們仍然希望您無論身在何處都能與我們一起慶祝。</p>
 						<p>如果您想虛擬參與，請向我們發送視頻消息，我們將拼接在一起並在招待會上播放。請將視頻保持在 30 秒到 1 分鐘之間，並使用橫向。如果文件大小小於 50MB，請通過以下地址給我們發送電子郵件。如果更大，您可以上傳到共享的 <a href="https://drive.google.com/drive/folders/154Xq8WUxSkpviVhWrq7u7ZQ64zZJhSNb?usp=sharing">Google Drive</a> 或聯繫我們另行安排< /p>
@@ -365,8 +331,7 @@
                     <li class=""><a href="#festivities">Festivities</a></li>
                     <li class=""><a href="#registry">Registry</a></li>
                     <li class=""><a href="#travel">Travel</a></li>
-                    <li class=""><a href="#to-do-to-eat">To do/To eat</a></li>
-                    <li class="last"><a href="#remote">Remote</a></li>
+                    <li class="last"><a href="#celebrate">Celebrate</a></li>
                 </ul>
 				<ul class="nav chinese">
 					<li class="active"><a href="#our-story">我們的故事</a></li>
@@ -374,8 +339,7 @@
                     <li class=""><a href="#festivities">慶祝活動</a></li>
                     <li class=""><a href="#registry">註冊表</a></li>
                     <li class=""><a href="#travel">旅行</a></li>
-                    <li class=""><a href="#to-do-to-eat">做/吃</a></li>
-                    <li class="last"><a href="#remote">遠程</a></li>
+                    <li class="last"><a href="#celebrate">慶祝</a></li>
                 </ul>				
             </nav>
 			<div id="languageSelector" data-717="font-size: 2em; color: #7e7e7e; background: rgba(0, 0, 0, 0.6); filter: alpha(opacity=100); -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=100)';
@@ -444,4 +408,4 @@
         <!--[endif]-->
     
 
-<div style="min-width: 1px; position: absolute; z-index: 0; top: 0px; width: 1px; right: 0px; height: 6596px;"></div></body></html>
+<div style="min-width: 1px; position: absolute; z-index: 0; top: 0px; width: 1px; right: 0px; height: 5684px;"></div></body></html>
