--- a/index.html
+++ b/index.html
@@ -42,12 +42,19 @@
 								<h1>July 31st, 2019</h1>
 								<h3>The Beginning</h3>
 								<hr />
-								<p>It all started with a simple and polite email exchange after an introduction from family & friends. Tim was Sr. Software Dev Manager in Seattle and Michelle was a lawyer living in Shanghai. Neither was looking for a long-distance relationship. </p>
+								<p>
+									It all started with a simple and polite email exchange after an introduction from family & friends.
+									Tim was Sr. Software Dev Manager in Seattle and Michelle was a Sr. lawyer living in Shanghai.
+								</p>
+								<p>Neither was looking for a long-distance relationship.</p>
 							</span><span class="chinese">
 								<h1>2019 年 7 月 31 日</h1>
-								<h3>開始</h3>
+								<h3>切起源於...</h3>
 								<hr />
-								<p>在家人和朋友的介紹下，這一切都始於簡單而禮貌的電子郵件交流。 Tim 是西雅圖的高級軟件開發經理，Michelle 是住在上海的律師。兩人都沒有在尋找異地戀。 </p>
+								<p>這一切的開始起源於一封簡單而禮貌的電子郵件交流</p>
+								<p>通過家人和朋友的介紹，Tim取得了Michelle的Email地址<p>
+								<p>Tim 是西雅圖的軟件開發高級經理，Michelle 是在上海的高級律師</p>
+								<p>兩人都不想尋找異地戀</p>
 							</span>
                             <a href="#" class="icn-history-close">close</a>
                         </div>
@@ -56,18 +63,35 @@
                         <img src="./img/bg/history-firstMeeting.jpg" width="1300" height="768">
                         <a href="#" class="icn-history-more">more</a>
                         <div class="info">
-							<h1>2019</h1>
 							<span class="english">
+								<h1>Sept 11, 2019</h1>
 								<h3>First Meeting</h3>
 								<hr />
-								<p>Tim was visiting Taipei for his brother’s wedding. On a very rainy day stuck in the apartment, boredom drove Tim to randomly text Michelle who happened to be visiting her family in Tainan. After some convincing, Tim hopped on a 2-hour train ride to meet up and spend a day with Michelle.</p>
-								<p>Toward the end of the day, the two briefly stopped by a "状元稞" stand where the grandma “mistakenly” told them to hurry up and get married. Turns out grandma was actually a clairvoyant.</p>
+								<p>
+									Tim was visiting Taipei for his brother’s wedding. 
+									On a very rainy day stuck in the apartment
+									Boredom drove Tim to randomly text Michelle who happened to be visiting her family in Tainan. 
+									After some convincing, Tim hopped on a 2-hour train ride to meet up and spend a day with Michelle.
+								</p>
+								<p>
+									Toward the end of the day, the two briefly stopped by a "狀元稞" stand 
+									where the grandma “mistakenly” told them to hurry up and get married.
+								<p>
+								<br/>
+								<p>Turns out grandma was actually a clairvoyant.</p>
 							</span><span class="chinese">
+								<h1>2019 年 9 月 11 日</h1>
 								<h3>第一次會議</h3>
 								<hr />
-								<p>Tim 去台北參加他哥哥的婚禮。在一個大雨天困在公寓裡，蒂姆無聊地給恰好去台南探親的米歇爾發了短信。經過一番說服後，蒂姆跳上了 2 小時的火車車程，與米歇爾會面並度過了一天。</p> <p>一天快結束時，兩人在一個状元稞攤位短暫停留，奶奶在那裡“誤”叫他們趕緊結婚。原來奶奶是個千里眼。</p>
-								<p>一天快結束的時候，兩人在一個<糖果>攤前短暫停留，奶奶“誤”讓他們快點結婚。原來奶奶是個千里眼。</p>
-							</span>
+								<p>因著參加哥哥婚禮而回來臺北的Tim，在一個大雨天被困在家中</p>
+								<p>Tim無聊地給Michelle發了訊息，發現Michelle也剛好回到了臺南探視父母親</p>
+								<p>經過一番自我說服後，Tim跳上了 2 小時的火車車程，來到了臺南並與米歇爾度過了一天</p>
+								<p>在這一天快結束的時候，兩人一同到傳統米店買狀元稞</p>
+								<p>米店裏的一位奶奶和Tim以及Michelle聊著天，並誤以為兩個人正在交往</p>
+								<p>奶奶突然說：“你們趕緊結婚吧！”</p>
+								<br/>
+								<p>沒想到，原來奶奶還是個預言者</p>
+								</span>
 							<a href="#" class="icn-history-close">close</a>
                         </div>  
                     </div>
@@ -200,7 +224,7 @@
             <section id="quote">
                 <img src="./img/bg/quote.jpg" data-999="display: none;" data-1000="display: block;" data-1800="bottom: 0px;" data-2700="bottom: -500px;">
                 <div class="info" data-1500="top: 600px;" data-2100="top: 120px;" data-2550="top: 120px;" data-2700="top: -200px;">
-                    <p>Distance never seperates us<br>距離從未將我們分開<br>私たちの愛は距離に負けない<br></p>
+                    <p>Distance never seperates us<br>距離從未將我們分開<br>私たちの気持ちが距離によって引き離されることはありません<br></p>
                 </div>
             </section>
 
@@ -211,7 +235,7 @@
 						<h2>Saturday June 3rd</h2>
 						<h2><a class="rsvp" href="https://forms.gle/cnS1CiZhZr1Htx3e9" targe="_blank">Click here to RSVP</a></h2>
 					</span><span class="chinese">
-						<h1 class="heading chinese">慶祝活動</h1>
+						<h1 class="heading chinese">婚禮詳情</h1>
 						<h2>星期六 6月3日</h2>
 						<h2><a class="rsvp" href="https://forms.gle/cnS1CiZhZr1Htx3e9" targe="_blank">點擊此處回复</a></h2>
 					</span>
@@ -262,11 +286,10 @@
 					<span class="english">
 						<h1 class="heading">Registry</h1>
 						<p>We've been too busy (or more likely too lazy) to sit down and build a registry.</p>
-						<p>Please check back later when we might have something available.</p>
 						<br>
 						<p>Instead of getting us a wedding gift though, we ask that you consider donating to our friend's charity and encourage your friends and family to do the same. You can find the donation link below:</p>
 					</span><span class="chinese">
-						<h1 class="heading">註冊表</h1>
+						<h1 class="heading">禮物清單</h1>
 						<p>我們太忙了（或者更可能是太懶了）沒時間坐下來構建註冊表。</p>
 						<p>請稍後再回來查看我們可能有可用的東西。</p>
 						<br>
@@ -289,7 +312,7 @@
 						</ul>
 					</span>
 					<span class="chinese">
-						<h1 class="heading">旅遊信息</h1>
+						<h1 class="heading">交通指南</h1>
 						<p><b>從桃園機場 (TPE)：</b>出租車是前往台北最簡單且價格合理的方式。當您離開行李提取區時，有一個出租車信息站。成本應該在 ~1400 新台幣左右。如需更便宜的選擇，您可以乘坐桃園機場捷運到台灣總站，只需約 150 新台幣。嘗試乘坐紫色特快列車，因為它會快得多。</p>
 						<p><b>從台北車站：</b>搭乘計程車只需幾百台幣便可到達。如果你喜歡坐捷運，你可以乘坐藍線南港方向，在忠孝新生站下車（2站）。要前往香格里拉大酒店，請繼續乘坐藍線至忠孝復興站。轉搭往台北動物園方向的布朗線，在科技大樓或六張里站下車。 (<a href="https://english.metro.taipei/cp.aspx?n=1BE0AF76C79F9A38" target="_blank">地鐵地圖</a>)</p>
 						<p><b>酒店選擇：</b></p>
@@ -335,11 +358,11 @@
                 </ul>
 				<ul class="nav chinese">
 					<li class="active"><a href="#our-story">我們的故事</a></li>
-                    <li class=""><a href="#gallery">圖庫</a></li>
-                    <li class=""><a href="#festivities">慶祝活動</a></li>
-                    <li class=""><a href="#registry">註冊表</a></li>
-                    <li class=""><a href="#travel">旅行</a></li>
-                    <li class="last"><a href="#celebrate">慶祝</a></li>
+                    <li class=""><a href="#gallery">照片集</a></li>
+                    <li class=""><a href="#festivities">婚禮詳情</a></li>
+                    <li class=""><a href="#registry">禮物清單</a></li>
+                    <li class=""><a href="#travel">交通指南</a></li>
+                    <li class="last"><a href="#celebrate">與我們一起慶祝</a></li>
                 </ul>				
             </nav>
 			<div id="languageSelector" data-717="font-size: 2em; color: #7e7e7e; background: rgba(0, 0, 0, 0.6); filter: alpha(opacity=100); -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=100)';
